feat: complete Phase 1 auth and user
